--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,147 +1,166 @@
+@import url('/home/arkaizn/.cache/wal/colors-waybar.css');
+
 * {
-  min-height: 0;
-  font-family: Lexend, "Font Awesome 6 Free Solid";
-  font-size: 16px;
-  font-weight: 600;
+    font-size:15px;
+    font-family: "CodeNewRoman Nerd Font Propo";
 }
-
-window#waybar {
-  transition-property: background-color;
-  transition-duration: 0.5s;
-  /* background-color: #1e1e2e; */
-  /* background-color: #181825; */
-  background-color: #11111b;
-  /* background-color: rgba(24, 24, 37, 0.6); */
+window#waybar{
+    all:unset;
 }
-
-window#waybar.hidden {
-  opacity: 0.5;
+.modules-left {
+    padding:7px;
+    margin:5px;
+    border-radius:10px;
+    background: alpha(@background,.5);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
-
-#workspaces {
-  background-color: transparent;
+.modules-center {
+    padding:7px;
+    margin:5px;
+    border-radius:10px;
+    background: alpha(@background,.5);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
-
-#workspaces button {
-  all: initial;
-  min-width: 0;
-  box-shadow: inset 0 -3px transparent;
-  padding: 2px 10px;
-  min-height: 0;
-  margin: 4px 4px;
-  border-radius: 4px;
-  /* background-color: #181825; */
-  background-color: #1e1e2e;
-  color: #cdd6f4;
+.modules-right {
+    padding:7px;
+    margin:5px;
+    border-radius:10px;
+    background: alpha(@background,.5);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
 }
-
-#workspaces button:hover {
-  box-shadow: inherit;
-  text-shadow: inherit;
-  color: #1e1e2e;
-  background-color: #cdd6f4;
-}
-
-#workspaces button.active {
-  color: #1e1e2e;
-  background-color: #89b4fa;
-}
-
-#workspaces button.urgent {
-  color: #1e1e2e;
-  background-color: #f38ba8;
-}
-
-#clock,
-#pulseaudio,
-#custom-logo,
-#custom-power,
-#custom-spotify,
-#cpu,
-#tray,
-#memory,
-#window {
-  min-height: 0;
-  padding: 2px 10px;
-  border-radius: 4px;
-  margin: 4px 4px;
-  /* background-color: #181825; */
-  background-color: #1e1e2e;
-}
-
-#custom-sep {
-  padding: 0px;
-  color: #585b70;
-}
-
-#custom-spotify.playing {
-  color: #a6e3a1;
-}
-
-#custom-spotify.liked {
-  color: #cba6f7;
-}
-#custom-spotify.added {
-  color: #f9e2af;
-}
-
-#custom-spotify.removed {
-  color: #f38ba8;
-}
-
-#custom-spotify.paused {
-  color: #9399b2;
-}
-
-window#waybar.empty #window {
-  background-color: transparent;
-}
-
-#cpu {
-  color: #94e2d5;
-}
-
-#memory {
-  color: #cba6f7;
-}
-
-#clock {
-  color: #74c7ec;
-}
-
-#clock.simpleclock {
-  color: #89b4fa;
-}
-
-#window {
-  color: #a6e3a1;
-}
-
-#pulseaudio {
-  color: #b4befe;
-}
-
-#pulseaudio.muted {
-  color: #a6adc8;
-}
-
-#custom-logo {
-  color: #89b4fa;
-}
-
-#custom-power {
-  color: #f38ba8;
-  padding-right: 5px;
-  font-size: 14px;
-}
-
-@keyframes blink {
-  to {
-    background-color: #f38ba8;
-    color: #181825;
-  }
-}
-
 tooltip {
-  background-color: #181825;
+    background:@background;
+    color: @color7;
+}
+#clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
+    transition: all .3s ease;
+    color:@color9;
+}
+#custom-notification {
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@color7;
+}
+#clock{
+    padding: 0px 5px;
+    color:@color7;
+    transition: all .3s ease;
+}
+#custom-pacman{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@color7;
+
+}
+#workspaces {
+    padding: 0px 5px;
+}
+#workspaces button {
+    all:unset;
+    padding: 0px 5px;
+    color: rgba(0,0,0,0);
+    text-shadow: 0px 0px 1px rgba(0, 0, 0, .4);
+}
+#workspaces button:hover {
+    color:rgba(0,0,0,0);
+    text-shadow: 0px 0px 1px rgba(0, 0, 0, .7);
+    transition: all 1s ease;
+}
+#workspaces button.active {
+    color: @color9;
+    border: none;
+    transition: all 1s ease;
+}
+#workspaces button.empty {
+    color: rgba(0,0,0,0);
+    border: none;
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .2);
+}
+#workspaces button.empty:hover {
+    color: rgba(0,0,0,0);
+    border: none;
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
+    transition: all 1s ease;
+}
+#workspaces button.empty.active {
+    color: @color9;
+    border: none;
+    transition: all 1s ease;
+}
+#bluetooth{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@color7;
+
+}
+#network{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@color7;
+
+}
+#battery{
+    padding: 0px 5px;
+    transition: all .3s ease;
+    color:@color7;
+
+
+}
+#battery.charging {
+    color: #26A65B;
+}
+
+#battery.warning:not(.charging) {
+    color: #ffbe61;
+}
+
+#battery.critical:not(.charging) {
+    color: #f53c3c;
+    animation-name: blink;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+#group-expand{
+    padding: 0px 5px;
+    transition: all .3s ease; 
+}
+#custom-expand{
+    padding: 0px 5px;
+    color:alpha(@foreground,.2);
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, .7);
+    transition: all .3s ease; 
+}
+#custom-expand:hover{
+    color:rgba(255,255,255,.2);
+    text-shadow: 0px 0px 2px rgba(255, 255, 255, .5);
+}
+#custom-colorpicker{
+    padding: 0px 5px;
+}
+#cpu,#memory,#temperature{
+    padding: 0px 5px;
+    transition: all .3s ease; 
+    color:@color7;
+
+}
+#custom-endpoint{
+    color:transparent;
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 1);
+
+}
+#tray{
+    padding: 0px 5px;
+    transition: all .3s ease; 
+
+}
+#tray menu * {
+    padding: 0px 5px;
+    transition: all .3s ease; 
+}
+
+#tray menu separator {
+    padding: 0px 5px;
+    transition: all .3s ease; 
 }
